primer commit agrego el index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<title>mi primer pagina</title>
 </head>
 <body>
-<center>
-    <h1>hola heri</h1>
-</center>
+    <h1>hola heriberto vazquez</h1>
 </body>
 </html>
