primer commit agrego el index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>mi primer pagina</title>
 </head>
+<center>
 <body>
     <h1>hola heriberto vazquez</h1>
 </body>
+</center>
 </html>
