primer commit agrego el index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>mi primer pagina</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Motocicletas: El mundo sobre dos ruedas</title>
+    <style>
+        /* Fondo de la página */
+        body {
+            background-size: cover;
+            background-position: center;
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Estilo del encabezado */
+        header {
+            text-align: center;
+            padding: 50px;
+            background: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+            color: #FFD700;
+        }
+
+        header p {
+            font-size: 1.2em;
+        }
+
+        /* Estilo de la sección de contenido */
+        section {
+            padding: 30px;
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente para la sección */
+            margin: 20px;
+            border-radius: 8px;
+        }
+
+        section h2 {
+            font-size: 2em;
+            color: #FFD700;
+        }
+
+        section p {
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+
+        /* Estilo del pie de página */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        footer p {
+            color: #FFD700;
+            margin: 0;
+        }
+    </style>
 </head>
-<center>
 <body>
-    <h1>hola heriberto vazquez</h1>
+
+    <!-- Encabezado -->
+    <header>
+        <h1>Bienvenidos al mundo de las motocicletas</h1>
+        <p>Explora las maravillas de las motocicletas y cómo estas máquinas dominan las carreteras.</p>
+    </header>
+
+    <!-- Contenido Principal -->
+    <section>
+        <h2>¿Qué son las motocicletas?</h2>
+        <p>Las motocicletas son vehículos de dos ruedas impulsados por un motor. Son conocidas por su agilidad, velocidad y bajo consumo de combustible, lo que las hace ideales tanto para la ciudad como para largas distancias. Existen diferentes tipos, como deportivas, cruiser, naked, y touring, cada una diseñada para satisfacer diversas necesidades de los motociclistas.</p>
+        
+        <h2>Historia de las motocicletas</h2>
+        <p>La historia de las motocicletas se remonta a finales del siglo XIX, cuando los primeros modelos comenzaron a ser fabricados. La primera motocicleta reconocida fue creada por Gottlieb Daimler y Wilhelm Maybach en 1885 en Alemania. Desde entonces, las motocicletas han evolucionado enormemente, con avances en tecnología, diseño y seguridad.</p>
+
+        <h2>Tipos de motocicletas</h2>
+        <p>Hoy en día, existen muchos tipos de motocicletas, cada una adaptada a distintos estilos de conducción. Las motocicletas deportivas están diseñadas para altas velocidades y maniobrabilidad, mientras que las motocicletas cruiser son conocidas por su comodidad en viajes largos y su estética clásica.</p>
+    </section>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; 2024 Motocicletas, Todo sobre el mundo de las dos ruedas.</p>
+    </footer>
+
 </body>
-</center>
 </html>
