--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Motocicletas: El mundo sobre dos ruedas</title>
+    <title>Motocicletas: El mundo sobre dos ruedas todo lo que quieres saber</title>
     <style>
         /* Fondo de la página */
         body {
