primer commit agrego el index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Motocicletas: El mundo sobre dos ruedas todo lo que quieres saber</title>
+    <title>Motocicletas: El mundo sobre dos ruedas</title>
     <style>
         /* Fondo de la página */
         body {
@@ -71,7 +71,7 @@
 
     <!-- Encabezado -->
     <header>
-        <h1>Bienvenidos al mundo de las motocicletas</h1>
+        <h1>Bienvenidos al mundo de las motocicletas: todo lo que debes saber</h1>
         <p>Explora las maravillas de las motocicletas y cómo estas máquinas dominan las carreteras.</p>
     </header>
 
