--- a/index.html
+++ b/index.html
@@ -1,96 +1,113 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Motocicletas: El mundo sobre dos ruedas</title>
-    <style>
-        /* Fondo de la página */
-        body {
-            background-size: cover;
-            background-position: center;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Estilo del encabezado */
-        header {
-            text-align: center;
-            padding: 50px;
-            background: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
-        }
-
-        header h1 {
-            font-size: 3em;
-            margin: 0;
-            color: #FFD700;
-        }
-
-        header p {
-            font-size: 1.2em;
-        }
-
-        /* Estilo de la sección de contenido */
-        section {
-            padding: 30px;
-            background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente para la sección */
-            margin: 20px;
-            border-radius: 8px;
-        }
-
-        section h2 {
-            font-size: 2em;
-            color: #FFD700;
-        }
-
-        section p {
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
-
-        /* Estilo del pie de página */
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-
-        footer p {
-            color: #FFD700;
-            margin: 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tienda de Refacciones El Motor</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header { background-color: #222; color: white; padding: 20px; text-align: center; }
+    nav { background-color: #444; display: flex; justify-content: center; }
+    nav a {
+      color: white; padding: 14px 20px; text-decoration: none; text-transform: uppercase;
+    }
+    nav a:hover { background-color: #666; }
+    section { padding: 20px; }
+    .catalogo { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
+    .item { border: 1px solid #ccc; border-radius: 5px; padding: 10px; text-align: center; }
+    .item img { width: 100%; height: auto; }
+    footer { background-color: #222; color: white; text-align: center; padding: 10px; }
+  </style>
 </head>
 <body>
 
-    <!-- Encabezado -->
-    <header>
-        <h1>Bienvenidos al mundo de las motocicletas: todo lo que debes saber</h1>
-        <p>Explora las maravillas de las motocicletas y cómo estas máquinas dominan las carreteras.</p>
-    </header>
+<header>
+  <h1>Tienda de Refacciones "El Motor"</h1>
+  <p>Todo para tu auto, en un solo lugar</p>
+</header>
 
-    <!-- Contenido Principal -->
-    <section>
-        <h2>¿Qué son las motocicletas?</h2>
-        <p>Las motocicletas son vehículos de dos ruedas impulsados por un motor. Son conocidas por su agilidad, velocidad y bajo consumo de combustible, lo que las hace ideales tanto para la ciudad como para largas distancias. Existen diferentes tipos, como deportivas, cruiser, naked, y touring, cada una diseñada para satisfacer diversas necesidades de los motociclistas.</p>
-        
-        <h2>Historia de las motocicletas</h2>
-        <p>La historia de las motocicletas se remonta a finales del siglo XIX, cuando los primeros modelos comenzaron a ser fabricados. La primera motocicleta reconocida fue creada por Gottlieb Daimler y Wilhelm Maybach en 1885 en Alemania. Desde entonces, las motocicletas han evolucionado enormemente, con avances en tecnología, diseño y seguridad.</p>
+<nav>
+  <a href="#inicio">Inicio</a>
+  <a href="#nosotros">Nosotros</a>
+  <a href="#novedades">Novedades</a>
+  <a href="#catalogo">Catálogo</a>
+  <a href="#contacto">Contáctanos</a>
+  <a href="#carro">Carro de Compras</a>
+</nav>
 
-        <h2>Tipos de motocicletas</h2>
-        <p>Hoy en día, existen muchos tipos de motocicletas, cada una adaptada a distintos estilos de conducción. Las motocicletas deportivas están diseñadas para altas velocidades y maniobrabilidad, mientras que las motocicletas cruiser son conocidas por su comodidad en viajes largos y su estética clásica.</p>
-    </section>
+<section id="inicio">
+  <h2>Bienvenido</h2>
+  <p>Encuentra las mejores refacciones para tu automóvil a precios increíbles. Calidad garantizada.</p>
+  <img src="https://images.unsplash.com/photo-1601924579440-ea5f84f0557d" alt="Refacciones" style="width:100%; max-height:300px; object-fit:cover;">
+</section>
 
-    <!-- Pie de página -->
-    <footer>
-        <p>&copy; 2024 Motocicletas, Todo sobre el mundo de las dos ruedas.</p>
-    </footer>
+<section id="nosotros">
+  <h2>¿Quiénes Somos?</h2>
+  <p>Con más de 15 años en el mercado, en "El Motor" nos especializamos en ofrecer refacciones de alta calidad para todas las marcas. Nuestro compromiso es tu seguridad y confianza.</p>
+</section>
+
+<section id="novedades">
+  <h2>Novedades</h2>
+  <ul>
+    <li>Nueva línea de filtros Bosch disponibles.</li>
+    <li>Descuento del 15% en frenos durante este mes.</li>
+    <li>Lanzamos sección de partes eléctricas para motos.</li>
+  </ul>
+</section>
+
+<section id="catalogo">
+  <h2>Catálogo por Categoría</h2>
+
+  <h3>⚙️ Motor</h3>
+  <div class="catalogo">
+    <div class="item">
+      <img src="https://images.unsplash.com/photo-1603363053637-2f04d5d02b2c" alt="Pistones">
+      <h4>Pistones</h4>
+      <p>$1,200 MXN</p>
+    </div>
+    <div class="item">
+      <img src="https://images.unsplash.com/photo-1590563362707-29134d1bbdd6" alt="Bomba de aceite">
+      <h4>Bomba de Aceite</h4>
+      <p>$850 MXN</p>
+    </div>
+  </div>
+
+  <h3>🛞 Suspensión</h3>
+  <div class="catalogo">
+    <div class="item">
+      <img src="https://images.unsplash.com/photo-1571604102350-d1c789d1d08b" alt="Amortiguadores">
+      <h4>Amortiguadores</h4>
+      <p>$950 MXN</p>
+    </div>
+    <div class="item">
+      <img src="https://images.unsplash.com/photo-1585763364069-e8f28942fcaa" alt="Resortes">
+      <h4>Resortes</h4>
+      <p>$450 MXN</p>
+    </div>
+  </div>
+</section>
+
+<section id="contacto">
+  <h2>Contáctanos</h2>
+  <p>Email: contacto@elmotorrefacciones.com</p>
+  <p>Teléfono: +52 55 1234 5678</p>
+  <p>Dirección: Av. Automotriz 123, Ciudad de México</p>
+  <form>
+    <label>Nombre:<br><input type="text" name="nombre"></label><br><br>
+    <label>Mensaje:<br><textarea name="mensaje" rows="4" cols="30"></textarea></label><br><br>
+    <button type="submit">Enviar</button>
+  </form>
+</section>
+
+<section id="carro">
+  <h2>Carro de Compras</h2>
+  <p>Aquí aparecerán los productos que vayas agregando.</p>
+  <p>(Funcionalidad en desarrollo)</p>
+</section>
+
+<footer>
+  <p>&copy; 2025 El Motor Refacciones. Todos los derechos reservados.</p>
+</footer>
 
 </body>
 </html>
