--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     section.active { display: block; }
     .catalogo {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
       gap: 20px;
       margin-top: 20px;
     }
-    .item {
+    .item, .producto {
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 10px;
@@ -28,20 +28,24 @@
       transition: transform 0.2s;
       cursor: pointer;
     }
-    .item img {
+    .item img, .producto img {
       width: 100%;
-      height: 150px;
+      height: 120px;
       object-fit: cover;
       border-radius: 5px;
     }
-    .item:hover {
-      transform: scale(1.02);
+    .item:hover, .producto:hover {
+      transform: scale(1.03);
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .subcatalogo {
+    .subcatalogo, .detalle-producto {
       margin-top: 20px;
       padding-top: 10px;
       border-top: 2px solid #ccc;
+    }
+    .detalle-producto img {
+      width: 100%;
+      max-width: 400px;
     }
   </style>
 </head>
@@ -49,125 +53,127 @@
 
 <header>
   <h1>Tienda de Refacciones "El Motor"</h1>
-  <p>Todo para tu auto, en un solo lugar</p>
 </header>
 
 <nav>
-  <a onclick="mostrarSeccion('inicio')">Inicio</a>
-  <a onclick="mostrarSeccion('nosotros')">Nosotros</a>
-  <a onclick="mostrarSeccion('novedades')">Novedades</a>
   <a onclick="mostrarSeccion('catalogo')">Catálogo</a>
-  <a onclick="mostrarSeccion('contacto')">Contáctanos</a>
   <a onclick="mostrarSeccion('carro')">Carro de Compras</a>
 </nav>
 
-<section id="inicio" class="active">
-  <h2>Bienvenido</h2>
-  <p>Encuentra las mejores refacciones para tu automóvil a precios increíbles. Calidad garantizada.</p>
-  <img src="https://images.unsplash.com/photo-1601924579440-ea5f84f0557d" alt="Refacciones" style="width:100%; max-height:300px; object-fit:cover;">
-</section>
-
-<section id="nosotros">
-  <h2>¿Quiénes Somos?</h2>
-  <p>Con más de 15 años en el mercado, en "El Motor" nos especializamos en ofrecer refacciones de alta calidad para todas las marcas. Nuestro compromiso es tu seguridad y confianza.</p>
-</section>
-
-<section id="novedades">
-  <h2>Novedades</h2>
-  <ul>
-    <li>Nueva línea de filtros Bosch disponibles.</li>
-    <li>Descuento del 15% en frenos durante este mes.</li>
-    <li>Lanzamos sección de partes eléctricas para motos.</li>
-  </ul>
-</section>
-
-<section id="catalogo">
-  <h2>Catálogo por Categoría</h2>
+<section id="catalogo" class="active">
+  <h2>Catálogo de Categorías</h2>
   <div class="catalogo">
-    <div class="item" onclick="mostrarArticulos('motor')">
-      <img src="https://images.unsplash.com/photo-1603363053637-2f04d5d02b2c" alt="Motor">
+    <div class="item" onclick="mostrarCategoria('motor')">
+      <img src="https://via.placeholder.com/150?text=Motor">
       <h4>Motor</h4>
     </div>
-    <div class="item" onclick="mostrarArticulos('suspension')">
-      <img src="https://images.unsplash.com/photo-1571604102350-d1c789d1d08b" alt="Suspensión">
+    <div class="item" onclick="mostrarCategoria('suspension')">
+      <img src="https://via.placeholder.com/150?text=Suspension">
       <h4>Suspensión</h4>
     </div>
-  </div>
-
-  <!-- Artículos por categoría -->
-  <div id="motor" class="subcatalogo" style="display: none;">
-    <h3>Artículos de Motor</h3>
-    <div class="catalogo">
-      <div class="item">
-        <img src="https://images.unsplash.com/photo-1603363053637-2f04d5d02b2c" alt="Pistones">
-        <h4>Pistones</h4>
-        <p>$1,200 MXN</p>
-      </div>
-      <div class="item">
-        <img src="https://images.unsplash.com/photo-1590563362707-29134d1bbdd6" alt="Bomba de aceite">
-        <h4>Bomba de Aceite</h4>
-        <p>$850 MXN</p>
-      </div>
+    <div class="item" onclick="mostrarCategoria('frenos')">
+      <img src="https://via.placeholder.com/150?text=Frenos">
+      <h4>Frenos</h4>
+    </div>
+    <div class="item" onclick="mostrarCategoria('direccion')">
+      <img src="https://via.placeholder.com/150?text=Dirección">
+      <h4>Dirección</h4>
+    </div>
+    <div class="item" onclick="mostrarCategoria('electrico')">
+      <img src="https://via.placeholder.com/150?text=Eléctrico">
+      <h4>Eléctrico</h4>
+    </div>
+    <div class="item" onclick="mostrarCategoria('transmision')">
+      <img src="https://via.placeholder.com/150?text=Transmisión">
+      <h4>Transmisión</h4>
+    </div>
+    <div class="item" onclick="mostrarCategoria('escape')">
+      <img src="https://via.placeholder.com/150?text=Escape">
+      <h4>Escape</h4>
+    </div>
+    <div class="item" onclick="mostrarCategoria('accesorios')">
+      <img src="https://via.placeholder.com/150?text=Accesorios">
+      <h4>Accesorios</h4>
     </div>
   </div>
-
-  <div id="suspension" class="subcatalogo" style="display: none;">
-    <h3>Artículos de Suspensión</h3>
-    <div class="catalogo">
-      <div class="item">
-        <img src="https://images.unsplash.com/photo-1571604102350-d1c789d1d08b" alt="Amortiguadores">
-        <h4>Amortiguadores</h4>
-        <p>$950 MXN</p>
-      </div>
-      <div class="item">
-        <img src="https://images.unsplash.com/photo-1585763364069-e8f28942fcaa" alt="Resortes">
-        <h4>Resortes</h4>
-        <p>$450 MXN</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="contacto">
-  <h2>Contáctanos</h2>
-  <p>Email: contacto@elmotorrefacciones.com</p>
-  <p>Teléfono: +52 55 1234 5678</p>
-  <p>Dirección: Av. Automotriz 123, Ciudad de México</p>
-  <form>
-    <label>Nombre:<br><input type="text" name="nombre"></label><br><br>
-    <label>Mensaje:<br><textarea name="mensaje" rows="4" cols="30"></textarea></label><br><br>
-    <button type="submit">Enviar</button>
-  </form>
+  
+  <!-- Subcatálogos dinámicos -->
+  <div id="subcatalogo" class="subcatalogo"></div>
+  <div id="detalle" class="detalle-producto"></div>
 </section>
 
 <section id="carro">
   <h2>Carro de Compras</h2>
-  <p>Aquí aparecerán los productos que vayas agregando.</p>
-  <p>(Funcionalidad en desarrollo)</p>
+  <ul id="carro-lista"></ul>
 </section>
 
 <footer>
-  <p>&copy; 2025 El Motor Refacciones. Todos los derechos reservados.</p>
+  <p>&copy; 2025 El Motor Refacciones</p>
 </footer>
 
 <script>
+  const categorias = {
+    motor: generarArticulos("Motor"),
+    suspension: generarArticulos("Suspensión"),
+    frenos: generarArticulos("Frenos"),
+    direccion: generarArticulos("Dirección"),
+    electrico: generarArticulos("Eléctrico"),
+    transmision: generarArticulos("Transmisión"),
+    escape: generarArticulos("Escape"),
+    accesorios: generarArticulos("Accesorios")
+  };
+
   function mostrarSeccion(id) {
-    const secciones = document.querySelectorAll('section');
-    secciones.forEach(sec => sec.classList.remove('active'));
+    document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
     document.getElementById(id).classList.add('active');
   }
 
-  function mostrarArticulos(categoria) {
-    // Ocultar todos los subcatálogos
-    const subcatalogos = document.querySelectorAll('.subcatalogo');
-    subcatalogos.forEach(sc => sc.style.display = 'none');
+  function mostrarCategoria(nombre) {
+    const contenedor = document.getElementById('subcatalogo');
+    const detalle = document.getElementById('detalle');
+    detalle.innerHTML = "";
+    contenedor.innerHTML = `<h3>${nombre.charAt(0).toUpperCase() + nombre.slice(1)}</h3><div class='catalogo'>` +
+      categorias[nombre].map((a, i) => `
+        <div class='producto' onclick='mostrarDetalle("${nombre}", ${i})'>
+          <img src='${a.img}'>
+          <h4>${a.nombre}</h4>
+          <p>$${a.precio}</p>
+        </div>
+      `).join('') + '</div>';
+  }
 
-    // Mostrar el que corresponde
-    const seleccionada = document.getElementById(categoria);
-    if (seleccionada) {
-      seleccionada.style.display = 'block';
-      seleccionada.scrollIntoView({ behavior: 'smooth' });
+  function mostrarDetalle(categoria, index) {
+    const producto = categorias[categoria][index];
+    const detalle = document.getElementById('detalle');
+    detalle.innerHTML = `
+      <h3>${producto.nombre}</h3>
+      <img src='${producto.img}'>
+      <p>${producto.descripcion}</p>
+      <p><strong>Precio: $${producto.precio}</strong></p>
+      <button onclick='agregarCarrito("${producto.nombre}", ${producto.precio})'>Añadir al Carrito</button>
+    `;
+    detalle.scrollIntoView({ behavior: 'smooth' });
+  }
+
+  function agregarCarrito(nombre, precio) {
+    const lista = document.getElementById('carro-lista');
+    const item = document.createElement('li');
+    item.textContent = `${nombre} - $${precio}`;
+    lista.appendChild(item);
+    alert("Producto añadido al carrito");
+  }
+
+  function generarArticulos(nombreCategoria) {
+    let articulos = [];
+    for (let i = 1; i <= 10; i++) {
+      articulos.push({
+        nombre: `${nombreCategoria} Artículo ${i}`,
+        descripcion: `Descripción detallada del artículo ${i} de la categoría ${nombreCategoria}.`,
+        precio: (500 + i * 10),
+        img: `https://via.placeholder.com/300x150?text=${encodeURIComponent(nombreCategoria)}+${i}`
+      });
     }
+    return articulos;
   }
 </script>
 
