--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Tienda de Refacciones El Motor</title>
+  <title>Refaccionaria "Vazquez"</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
@@ -81,7 +81,7 @@
 
 <header>
   <div class="header-flex">
-    <img src="https://via.placeholder.com/50" alt="Logo">
+    <img src="https://thumbs.dreamstime.com/b/logotipo-de-motocicleta-dise%C3%B1o-vectores-para-motocicletas-taller-reparaci%C3%B3n-marca-producto-logo-motosport-veh%C3%ADculo-vector-263926379.jpg">
     <h1>Tienda de Refacciones "El Motor"</h1>
   </div>
 </header>
