--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
-    header, footer { background-color: #222; color: white; padding: 20px; text-align: center; }
+    header, footer { background-color: #AEC6CF; color: white; padding: 20px; text-align: center; }
     nav { background-color: #444; display: flex; justify-content: center; flex-wrap: wrap; }
     nav a {
       color: white; padding: 14px 20px; text-decoration: none; cursor: pointer;
@@ -73,7 +73,7 @@
       gap: 10px;
     }
     .header-flex img {
-      height: 50px;
+      height: 200px;
     }
   </style>
 </head>
