--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
     }
     .header-flex img {
       width: 350px;
-      height: 80px;
+      height: 100px;
       object-fit: cover;
       border-radius: 5px;
+      float: left;
     }
   </style>
 </head>
