--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Refaccionaria "Vazquez"</title>
-  <h1> Lo que necesitas para tu moto lo encontraras aqui</h1>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
@@ -88,6 +87,7 @@
   <div class="header-flex">
     <img src="https://thumbs.dreamstime.com/b/logotipo-de-motocicleta-dise%C3%B1o-vectores-para-motocicletas-taller-reparaci%C3%B3n-marca-producto-logo-motosport-veh%C3%ADculo-vector-263926379.jpg">
     <h1>Tienda de Refacciones "El Motor"</h1>
+    <h2>Todo lo que necesitas para tu motocicleta lo encontraras aqui<h2> 
   </div>
 </header>
 
