--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <header>
   <div class="header-flex">
     <img src="https://thumbs.dreamstime.com/b/logotipo-de-motocicleta-dise%C3%B1o-vectores-para-motocicletas-taller-reparaci%C3%B3n-marca-producto-logo-motosport-veh%C3%ADculo-vector-263926379.jpg">
-    <h1>Tienda de Refacciones "El Motor"</h1>
+    <h1>Refaccionaria "Vazquez"</h1>
     <h2>Todo lo que necesitas para tu motocicleta lo encontraras aqui<h2> 
   </div>
 </header>
