--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <h4>Escape</h4>
     </div>
     <div class="item" onclick="mostrarCategoria('equipo')">
-      <img src="https://via.placeholder.com/150?text=Accesorios">
+      <img src="https://th.bing.com/th/id/OIP.cNL6LTBDBpaaROnC9-Yx0QHaGl?rs=1&pid=ImgDetMain">
       <h4>Accesorios</h4>
     </div>
   </div>
