--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         nombre: `${nombreCategoria} Artículo ${i}`,
         descripcion: `Descripción detallada del artículo ${i} de la categoría ${nombreCategoria}.`,
         precio: (500 + i * 10),
-        img: `https://via.placeholder.com/300x150?text=${encodeURIComponent(nombreCategoria)}+${i}`
+        img: `https://th.bing.com/th/id/OIP.87Y6iYWcCFE3a3I1Sqrp-AAAAA?rs=1&pid=ImgDetMain${encodeURIComponent(nombreCategoria)}+${i}`
       });
     }
     return articulos;
