--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
     <div class="item" onclick="mostrarCategoria('accesorios')">
       <img src="https://th.bing.com/th/id/OIP.M_6dBuxEfODgN51yZlyDVAHaDV?rs=1&pid=ImgDetMain">
-      <h4>Dirección</h4>
+      <h4>Accesorios</h4>
     </div>
     <div class="item" onclick="mostrarCategoria('electrico')">
       <img src="https://http2.mlstatic.com/D_NQ_NP_870719-MLM54365074073_032023-O.webp">
@@ -175,7 +175,7 @@
     motor: generarArticulos("Motor"),
     suspension: generarArticulos("Suspensión"),
     frenos: generarArticulos("Frenos"),
-    Accesorios: generarArticulos("Accesorios"),
+    accesorios: generarArticulos("Accesorios"),
     electrico: generarArticulos("Eléctrico"),
     transmision: generarArticulos("Transmisión"),
     escape: generarArticulos("Escape"),
