--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 El Motor Refacciones</p>
+  <p>&copy; 2025 refacciones vazquez</p>
 </footer>
 
 <script>
@@ -260,6 +260,10 @@
       },
       "Suspensión": {
         precios: [480, 510, 495, 530, 520, 500, 540, 560, 580, 600],
+        imagenes: Array.from({ length: 10 }, (_, i) => `https://via.placeholder.com/150/00FF00/FFFFFF?text=Susp${i+1}`)
+      },
+       "Frenos": {
+        precios: [480, 510, 495, 530, 520, 500, 540, 560, 580, 660],
         imagenes: Array.from({ length: 10 }, (_, i) => `https://via.placeholder.com/150/00FF00/FFFFFF?text=Susp${i+1}`)
       },
     };
