--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
         precios: [480, 510, 495, 530, 520, 500, 540, 560, 580, 660],
         imagenes: Array.from({ length: 10 }, (_, i) => `https://via.placeholder.com/150/00FF00/FFFFFF?text=Susp${i+1}`)
       },
+      "Accesorios": {
+        precios: [480, 510, 495, 530, 520, 500, 540, 560, 580, 680],
+        imagenes: Array.from({ length: 10 }, (_, i) => `https://via.placeholder.com/150/00FF00/FFFFFF?text=Susp${i+1}`)
+      },
     };
 
     const datos = datosPorCategoria[nombreCategoria];
