--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
   const categorias = {
     motor: generarArticulos("Motor"),
     suspension: generarArticulos("Suspensión"),
+    frenos: generarArticulos("Frenos"),
+    accesorios: generarArticulos("Accesorios"),
   };
 
   const carrito = [];
