--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   }
 
   function generarArticulos(nombreCategoria) {
-    const mostrarCategoria = {
+    const datosPorCategoria = {
       "Motor": {
         precios: [650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
         imagenes: Array.from({ length: 10 }, (_, i) => `https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor${i+1}`)
